fix: minor issues for pack-servers and glyphs